# jni-demo

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/xyz/teamgravity/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/xyz/teamgravity/jnidemo/: MainActivity.kt
app/src/main/java/xyz/teamgravity/jnidemo/core/extension/: AnyExtension.kt
app/src/main/java/xyz/teamgravity/jnidemo/core/sample/: ArrayCriticalAccessSample.java  OverloadSample.java  RegisterNativesSample.java  StringCriticalAccessSample.java
app/src/main/java/xyz/teamgravity/jnidemo/core/sample/override/: Child.java  Parent.java
app/src/main/java/xyz/teamgravity/jnidemo/core/util/: FileReader.java  MathFunction.java  Unsafe.java
app/src/main/java/xyz/teamgravity/jnidemo/core/util/manager/: AnimalManager.java  LoanManager.java  MathManager.java  TextManager.java
app/src/main/java/xyz/teamgravity/jnidemo/data/model/: AnimalModel.java  CatModel.java  DogModel.java  PeopleModel.java  PersonModel.java
app/src/main/java/xyz/teamgravity/jnidemo/injection/app/: App.kt
app/src/main/java/xyz/teamgravity/jnidemo/presentation/activity/: MainActivity.kt
app/src/main/java/xyz/teamgravity/jnidemo/presentation/theme/: Color.kt  Theme.kt
app/src/main/java/xyz/teamgravity/jnidemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: AnimalManager.cpp  ArrayCriticalAccessSample.cpp  Child.cpp  FileReader.cpp  LoanManager.cpp  MathManager.cpp  OverloadSample.cpp  Parent.cpp  PeopleModel.cpp  PersonModelBag.cpp  PersonModelBook.cpp  PersonModelStudent.cpp  RegisterNativesSample.cpp  StringCriticalAccessSample.cpp  TextManager.cpp  Unsafe.cpp  xyz_teamgravity_jnidemo_core_sample_OverloadSample.h  xyz_teamgravity_jnidemo_core_util_FileReader.h  xyz_teamgravity_jnidemo_core_util_manager_AnimalManager.h  xyz_teamgravity_jnidemo_core_util_manager_MathManager.h  xyz_teamgravity_jnidemo_core_util_manager_TextManager.h
app/src/main/jni/include/: PeopleModel.h  xyz_teamgravity_jnidemo_core_sample_ArrayCriticalAccessSample.h  xyz_teamgravity_jnidemo_core_sample_StringCriticalAccessSample.h  xyz_teamgravity_jnidemo_core_sample_override_Child.h  xyz_teamgravity_jnidemo_core_sample_override_Parent.h  xyz_teamgravity_jnidemo_core_util_Unsafe.h  xyz_teamgravity_jnidemo_core_util_manager_LoanManager.h  xyz_teamgravity_jnidemo_core_util_manager_MathManager.h  xyz_teamgravity_jnidemo_core_util_manager_TextManager.h  xyz_teamgravity_jnidemo_data_model_PeopleModel.h  xyz_teamgravity_jnidemo_data_model_PersonModel_Bag.h  xyz_teamgravity_jnidemo_data_model_PersonModel_Book.h  xyz_teamgravity_jnidemo_data_model_PersonModel_Student.h
app/src/main/res/values/: themes.xml
app/src/test/java/xyz/teamgravity/jnidemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
