cmake_minimum_required(VERSION 3.4.1)
project(JNIDemo)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(math_manager SHARED src/main/jni/MathManager.cpp)
add_library(loan_manager SHARED src/main/jni/LoanManager.cpp)
add_library(overload_sample SHARED src/main/jni/OverloadSample.cpp)
add_library(parent SHARED src/main/jni/Parent.cpp)
add_library(child SHARED src/main/jni/Child.cpp)
add_library(text_manager SHARED src/main/jni/TextManager.cpp)

target_include_directories(math_manager PRIVATE src/main/jni/)
target_include_directories(loan_manager PRIVATE src/main/jni/)
target_include_directories(overload_sample PRIVATE src/main/jni)
target_include_directories(parent PRIVATE src/main/jni)
target_include_directories(child PRIVATE src/main/jni)
target_include_directories(text_manager PRIVATE src/main/jni)

find_library(log-lib log)
target_link_libraries(math_manager ${log-lib})
target_link_libraries(overload_sample ${log-lib})
target_link_libraries(parent ${log-lib})
target_link_libraries(child ${log-lib})
target_link_libraries(text_manager ${log-lib})